feat all to 1280/need fix 1024 768 320

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
 						alt="Анна Стародубова - дизайн и графика"
 						class="about-me__image"
 					/>
-					<div class="about-me__text-content">
+					<div class="about-me__title-box">
 						<h2 class="title about-me__title">Обо мне</h2>
-						<p class="subtitle">
+						<p class="subtitle about-me__subtitle">
 							Меня зовут Анна. Я&nbsp;графический дизайнер из&nbsp;Самары.
 						</p>
+					</div>
+					<div class="about-me__text-content">
 						<p class="about-me__text">
 							Раньше это было для меня как увлечение, но&nbsp;пару лет назад
 							я&nbsp;решила отойти от&nbsp;своей старой профессии юриста
@@ -112,7 +114,7 @@
 							</a>
 							<h2 class="title direction__title">Логотипы</h2>
 							<p class="subtitle direction__subtitle">
-								Создание логотипов, их ребрендинг
+								cоздание логотипов, их ребрендинг
 							</p>
 						</li>
 					</ul>
@@ -160,7 +162,7 @@
 					<img
 						src="./images/footer__logo.svg"
 						alt="Анна Стародубова"
-						class="logo"
+						class="logo footer__logo"
 					/>
 					<p class="footer__author">Дизайн: Анна Стародубова</p>
 				</div>
