--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 							<a href="https://vk.com/id693828178" class="link footer__link">
 								<img
 									src="./images/VK.svg"
-									alt="Найдиите мне в ВК"
+									alt="Найдите меня в ВК"
 									class="footer__logo"
 								/>
 								<p class="footer__menu-contact">id 693828178</p></a
