--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
 					<nav class="menu header__menu">
 						<ul class="header__menu-items">
 							<li class="header__menu-item">
-								<a href="" class="link" _blanck="target">Мои работы</a>
+								<a href="#" class="link" target="_blank" rel="noopener"
+									>Мои работы</a
+								>
 							</li>
 							<li>
-								<a href="" class="link" _blanck="target">Контакты</a>
+								<a href="№" class="link" target="_blank" rel="noopener"
+									>Контакты</a
+								>
 							</li>
 						</ul>
 					</nav>
@@ -127,6 +131,8 @@
 							<a
 								href="https://msngr.link/wa/79965290602"
 								class="link footer__link"
+								target="_blank"
+								rel="noopener"
 							>
 								<img
 									src="./images/WA.svg"
@@ -137,7 +143,12 @@
 							>
 						</li>
 						<li class="footer__menu-item">
-							<a href="https://t.me/AnnaS1109" class="link footer__link">
+							<a
+								href="https://t.me/AnnaS1109"
+								class="link footer__link"
+								target="_blank"
+								rel="noopener"
+							>
 								<img
 									src="./images/telegramm.svg"
 									alt="Напишите мне в Телеграмм"
@@ -147,7 +158,12 @@
 							>
 						</li>
 						<li class="footer__menu-item">
-							<a href="https://vk.com/id693828178" class="link footer__link">
+							<a
+								href="https://vk.com/id693828178"
+								class="link footer__link"
+								target="_blank"
+								rel="noopener"
+							>
 								<img
 									src="./images/VK.svg"
 									alt="Найдите меня в ВК"
