--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Стародубова Анна Петровна</title>
 		<link href="./pages/index.css" rel="stylesheet" />
+		<link rel="icon" href="./favicon.svg" type="image/svg+xml" />
 	</head>
 	<body class="root">
 		<div class="root__container">
@@ -70,17 +71,22 @@
 				<section class="direction root__direction">
 					<ul class="direction__items">
 						<li class="direction__item">
-							<a href="#" class="link direction__link">
+							<a
+								href="https://yandex.ru/news/?utm_medium=topnews_news&utm_source=chromenewtab"
+								class="link direction__link"
+							>
 								<img
 									src="./images/photos.jpg"
 									alt="Обработка фотографий"
 									class="direction__image"
 								/>
+
+								<h2 class="title direction__title">Фотография</h2>
+								<p class="subtitle direction__subtitle">
+									редактирование, ретушь, реставрация фотографий,
+									фотографирование
+								</p>
 							</a>
-							<h2 class="title direction__title">Фотография</h2>
-							<p class="subtitle direction__subtitle">
-								редактирование, ретушь, реставрация фотографий, фотографирование
-							</p>
 						</li>
 						<li class="direction__item">
 							<a href="#" class="link direction__link">
@@ -89,11 +95,12 @@
 									alt="Коллажирование"
 									class="direction__image"
 								/>
+
+								<h2 class="title direction__title">Коллажирование</h2>
+								<p class="subtitle direction__subtitle">
+									коллажирование фотографий и изображений
+								</p>
 							</a>
-							<h2 class="title direction__title">Коллажирование</h2>
-							<p class="subtitle direction__subtitle">
-								коллажирование фотографий и изображений
-							</p>
 						</li>
 						<li class="direction__item">
 							<a href="#" class="link direction__link">
@@ -102,11 +109,12 @@
 									alt="Разработка полиграфической продукции"
 									class="direction__image"
 								/>
+
+								<h2 class="title direction__title">Полиграфия</h2>
+								<p class="subtitle direction__subtitle">
+									визитки, буклеты, билборды, листовки, верстка журналов (газет)
+								</p>
 							</a>
-							<h2 class="title direction__title">Полиграфия</h2>
-							<p class="subtitle direction__subtitle">
-								визитки, буклеты, билборды, листовки, верстка журналов (газет)
-							</p>
 						</li>
 						<li class="direction__item">
 							<a href="#" class="link direction__link">
@@ -115,11 +123,12 @@
 									alt="Создание логотипов"
 									class="direction__image"
 								/>
+
+								<h2 class="title direction__title">Логотипы</h2>
+								<p class="subtitle direction__subtitle">
+									cоздание логотипов, их ребрендинг
+								</p>
 							</a>
-							<h2 class="title direction__title">Логотипы</h2>
-							<p class="subtitle direction__subtitle">
-								cоздание логотипов, их ребрендинг
-							</p>
 						</li>
 					</ul>
 				</section>
